samples/_failures_safe/1761525682_f02151_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_64305c77.c: In function ‘main’:
./samples/SAFE/__tmp_64305c77.c:178:57: error: expected ‘)’ at end of input
  178 |         if (event < 0 || event >= (sizeof(state_handlers
      |                                          ~              ^
      |                                                         )
./samples/SAFE/__tmp_64305c77.c:178:9: error: expected declaration or statement at end of input
  178 |         if (event < 0 || event >= (sizeof(state_handlers
      |         ^~
./samples/SAFE/__tmp_64305c77.c:178:9: error: expected declaration or statement at end of input
